// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expenses summary render corectly with 1 expense 1`] = `
<div>
  Viewing 1 expense totalling $1,095.00
</div>
`;

exports[`should expenses summary render corectly with 3 expenses 1`] = `
<div>
  Viewing 3 expenses totalling $1,141.95
</div>
`;
